First Update in a while

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header class="page-header">
         <nav class="navbox">
-            <ul>
+            <ul class="header">
                 <li class="abt"><a href="">About</a></li>
                 <li class="str"><a href="">Store</a></li>
                 <li class="gml"><a href="">Gmail</a></li>
@@ -21,12 +21,14 @@
         <img>
     </div>
     <footer>
-        <div class="privacy">Privacy</div>
-        <div class="terms">Terms</div>
-        <div class="settings">Settings</div>
-        <div class="advertising">Advertising</div>
-        <div class="business">Business</div>
-        <div class="search">How Search Works</div>
+        <ul class="footer">
+            <li class="privacy">Privacy</li>
+            <li class="terms">Terms</li>
+            <li class="settings">Settings</li>
+            <li class="advertising">Advertising</li>
+            <li class="business">Business</li>
+            <li class="search">How Search Works</li>
+        </ul>
     </footer>
 </body>
 </html>
